# imgui-dev

./: .gitignore  CMakeLists.txt  CMakeSettings.json  example.json  imgui.sln
NodeEditor/: CMakeLists.txt
NodeEditor/include/: Actions.h  NodeEditor.h  NodeEditor.inl
NodeEditor/include/ax/: SafePointerType.h  SafeType.h
NodeEditor/src/: Actions.cpp  Actions.h  Debug.cpp  Editor.cpp  Editor.h  NodeEditor.cpp  NodeEditor_Internal.h  NodeEditor_Internal.inl  Selection.cpp
NodeEditor/src/Actions/: Action.cpp  Action.h  DragAction.cpp  DragAction.h  NavigateAction.cpp  NavigateAction.h  SelectAction.cpp  SelectAction.h
NodeEditor/src/Builders/: NodeBuilder.cpp  NodeBuilder.h
NodeEditor/src/Utilities/: BitmaskType.h  Drawing.cpp  Drawing.h
addons/: imgui_transformation.cpp  imgui_transformation.h
cmake/: FindNodeEditor.cmake  Findgl3w.cmake  Findimgui.cmake  Findimguiex.cmake
example/: example.vcxproj  example.vcxproj.filters  imgui_impl_dx11.cpp  main-glfw.cpp  main.cpp
example/samples/: blueprint-node.cpp  canvas.cpp  layouts.cpp  samples.h
example/support/: Settings.cpp  Settings.h  Settings.inl  property.h  settings.h  settings.inl
imguiex/: CMakeLists.txt  imguiex.cpp  imguiex.h  imguiex_api.cpp  imguiex_canvas.cpp  imguiex_canvas.h  imguiex_internal.h
sample-browser/: CMakeLists.txt  imgui_impl_dx11.cpp  main-glfw.cpp  main.cpp
sample-browser/samples/: canvas.cpp  drawlist-transformation.cpp  hit-test.cpp  imguiex-canvas.cpp  layouts-basic.cpp  layouts-blueprint-node.cpp  layouts.cpp  node-editor.cpp  samples.h  transformation.cpp
sample-browser/support/: property.h  settings.cpp  settings.h
support/: CMakeLists.txt  custom.natvis
